# computer_graphics_finalproject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/ui_dearImgui/: CMakeLists.txt
ext/ui_dearImgui/cat1UI/: LUICommon.h  LUIHandler.cpp  LUIHandler.h  LUIWidgets.cpp  LUIWidgets.h  LUIWindow.cpp  LUIWindow.h
gengine/: CMakeLists.txt  Config.h
gengine/include/: LCommon.h  LFixedCamera3d.h  LFpsCamera.h  LICamera.h  LIRenderable.h  LMaterial.h  LMesh.h  LMeshBuilder.h  LShaderBasic3d.h  LShaderEntitiesLighting.h  LShaderEntitiesLightingShadows.h  LShaderFramebufferScreenRender.h  LShaderManager.h  LShaderShadowMap.h  LShadowMap.h  LVertexBuffer.h  LWindow.h
gengine/include/debug/: LDebugDrawer.h  LDebugSystem.h  LDebugViewer.h
gengine/include/shaders/: LShaderFramebufferScreenRender.h
gengine/src/: LFixedCamera3d.cpp  LFpsCamera.cpp  LInputHandler.cpp  LMesh.cpp  LMeshBuilder.cpp  LShaderManager.cpp  LShadowMap.cpp  LVertexBuffer.cpp  LWindow.cpp  testBullet.cpp
gengine/src/debug/: LDebugDrawer.cpp
gengine/src/shaders/: LShaderManager.cpp
res/deepTerrainData/characters/: raptor.json  raptor_test.json
tests/: .gitignore  CMakeLists.txt  testBullet.cpp  testBulletGL.cpp  testGL.cpp  testGLfeatures.cpp  testPrimitives.cpp  testScenario.cpp  testShadowMapping.cpp  testTysoc.cpp
tysoc/: CMakeLists.txt
tysoc/include/: TApp.h  TBasicGraphicsComponent.h  TBasicPhysicsComponent.h  TCommon.h  TComponent.h  TDebugUI.h  TEntitiesRenderer.h  TEntity.h  TGraphicsComponent.h  TMasterRenderer.h  TPhysicsComponent.h  TPlayerEntity.h  TPrimitiveEntity.h  TPrimitiveGraphicsComponent.h  TPrimitivePhysicsComponent.h  TTerrain1D.h  TTerrain1DPatchVoxels.h  TTerrain1DPatched.h  TTerrain1DPatchedRenderer.h  TTerrainRenderer.h  TTestApp.h  TWorld.h
tysoc/include/controllers/: TKeyboardController.h
tysoc/include/renderers/: TEntitiesRenderer.h  TTerrain1DPatchedRenderer.h  TTerrainRenderer.h  TTerrainStaticMeshedRenderer.h
tysoc/include/scenarios/: TBaseScenario.h
tysoc/include/sim/: TSimCharacterEntity.h  TSimCharacterGraphicsComponent.h  TSimCharacterMotionComponent.h  TSimCharacterPhysicsComponent.h  TSimJoint.h
tysoc/include/terrain/: TTerrain.h  TTerrain1D.h  TTerrain1DPatched.h  TTerrainStaticMeshed.h
tysoc/include/utils/: TCharacterParser.h
tysoc/src/: TApp.cpp  TBasicGraphicsComponent.cpp  TBasicPhysicsComponent.cpp  TComponent.cpp  TDebugUI.cpp  TEntitiesRenderer.cpp  TEntity.cpp  TGraphicsComponent.cpp  TMasterRenderer.cpp  TPhysicsComponent.cpp  TPlayerEntity.cpp  TPrimitiveEntity.cpp  TPrimitiveGraphicsComponent.cpp  TPrimitivePhysicsComponent.cpp  TTerrain1D.cpp  TTerrain1DPatchVoxels.cpp  TTerrain1DPatched.cpp  TTerrain1DPatchedRenderer.cpp  TTerrainRenderer.cpp  TWorld.cpp
tysoc/src/controllers/: TKeyboardController.cpp
tysoc/src/renderers/: TEntitiesRenderer.cpp  TTerrain1DPatchedRenderer.cpp  TTerrainRenderer.cpp  TTerrainStaticMeshedRenderer.cpp
tysoc/src/scenarios/: TBaseScenario.cpp
tysoc/src/sim/: TSimCharacterEntity.cpp  TSimCharacterGraphicsComponent.cpp  TSimCharacterMotionComponent.cpp  TSimCharacterPhysicsComponent.cpp  TSimJoint.cpp
tysoc/src/terrain/: TTerrain.cpp  TTerrain1D.cpp  TTerrain1DPatchVoxels.cpp  TTerrain1DPatched.cpp  TTerrainStaticMeshed.cpp
tysoc/src/utils/: TCharacterParser.cpp  TCharactersParser.cpp
